--- a/public/css/main.css
+++ b/public/css/main.css
@@ -162,7 +162,7 @@
 
 .input-box {
   flex: 1;
-  width: 25rem;
+  width: 60%;
   height: 2rem;
   border: none;
   box-shadow: 0 0.7rem 0.4rem rgba(168, 163, 163, 0.384);
