--- a/public/css/main.css
+++ b/public/css/main.css
@@ -80,7 +80,7 @@
 
 .search-container {
     background-color: white;
-    display: flex;
+    display: flex; 
     align-items: center;
     border-radius: 20px;
     padding: 5px 10px;
@@ -93,11 +93,22 @@
     margin-right: 20px;
 }
 
+@media (max-width: 800px) {
+  .search-container {
+      width: 20rem;
+  }
+}
+
+@media (max-width: 580px) {
+  .search-container {
+      width: 12rem; 
+  }
+} 
+
 .searchinput {
-    flex: 1 1 auto; 
-    max-width: 100%; 
     border: none;
     outline: none;
+    width: 100%; 
 }
 
 .search-icon{
@@ -137,11 +148,7 @@
 }
 .register-button:hover{opacity: 0.7;color: white;}
 
-@media (max-width: 800px) {
-  .search-container {
-      width: 20rem;
-  }
-} 
+ 
 
 .message-prompt {
   color: #788800;
