--- a/public/css/main.css
+++ b/public/css/main.css
@@ -179,6 +179,17 @@
   outline: none;
 }
 
+.input-box-item {
+  width: 100%;
+  height: 2rem;
+  border: none;
+  box-shadow: 0 0.7rem 0.4rem rgba(168, 163, 163, 0.384);
+  border-radius: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  outline: none;
+}
+
 .cancel-btn{
   background-color: transparent;
   color: #de810f;
@@ -196,6 +207,9 @@
   display: flex;
 }
 
+.item-container{
+  max-width: 60%;
+}
 
 .passwordModal {
 display: none; 
