compress the picture taken and cleaned up code

--- a/public/scss/bootstrap.scss
+++ b/public/scss/bootstrap.scss
@@ -1,8 +1,8 @@
 /******* Customized Bootstrap ********/
 
-$primary: #009CFF;
+$primary: #de810f;
 $light: #F3F6F9;
-$dark: #191C24;
+$dark: #002439;
 
 $font-family-base: 'Heebo', sans-serif;
 
