--- a/public/css/main.css
+++ b/public/css/main.css
@@ -262,3 +262,9 @@ color: black;
 text-decoration: none;
 cursor: pointer;
 }
+
+.header-text{
+  color: black;
+  font-size: 30px;
+  font-weight: bold;
+}.header-text:hover{opacity: 0.7;color: black;}
