--- a/public/css/main.css
+++ b/public/css/main.css
@@ -267,4 +267,5 @@ cursor: pointer;
   color: black;
   font-size: 30px;
   font-weight: bold;
+  margin-right: 10px;
 }.header-text:hover{opacity: 0.7;color: black;}
