--- a/public/css/main.css
+++ b/public/css/main.css
@@ -41,10 +41,8 @@
   background-color: #677e8a17;
 }
 
-.data-table th:nth-child(0),
-.data-table td:nth-child(0),
-.data-table th:nth-child(2),
-.data-table td:nth-child(2),
+.data-table th:nth-child(1),
+.data-table td:nth-child(1),
 .data-table th:nth-child(3),
 .data-table td:nth-child(3),
 .data-table th:nth-child(4),
@@ -52,23 +50,25 @@
 .data-table th:nth-child(5),
 .data-table td:nth-child(5),
 .data-table th:nth-child(6),
-.data-table td:nth-child(6) {
+.data-table td:nth-child(6),
+.data-table th:nth-child(7),
+.data-table td:nth-child(7) {
     min-width: 150px; 
 }
 
-.data-table th:nth-child(2),
-.data-table td:nth-child(2),
 .data-table th:nth-child(3),
 .data-table td:nth-child(3),
-.data-table th:nth-child(7),
-.data-table td:nth-child(7) {
+.data-table th:nth-child(4),
+.data-table td:nth-child(4),
+.data-table th:nth-child(8),
+.data-table td:nth-child(8) {
     max-width: 350px; 
 }
 
-.data-table th:nth-child(0),
-.data-table td:nth-child(0),
 .data-table th:nth-child(1),
-.data-table td:nth-child(1) {
+.data-table td:nth-child(1),
+.data-table th:nth-child(2),
+.data-table td:nth-child(2) {
     text-align: center;
 }
 
@@ -144,11 +144,11 @@
 
 .input-box {
   flex: 1;
-  width: 100%; 
+  width: 100%;
   height: 2.5rem;
-  border: 1.5px solid var(--primary);
+  border: 1px solid var(--primary); /* Adjust color */
   box-shadow: none;
-  outline: none; 
+  outline: none; /* Removes focus highlight */
   border-radius: 20px;
   padding-left: 20px;
   padding-right: 20px;
@@ -191,7 +191,6 @@ overflow: auto;
 background-color: rgba(0,0,0,0.4); 
 }
 
-
 .supplierModalContent {
 background-color: #fefefe;
 margin: 15% auto; 
@@ -211,7 +210,6 @@ padding-right: 20px;
 outline: none;
 margin-right: 1rem;
 } */
-
 
 .close {
 color: #aaa;
