--- a/public/css/main.css
+++ b/public/css/main.css
@@ -251,6 +251,20 @@ cursor: pointer;
   opacity: 70%;
 }
 
+.forgot-pass-btn{
+  background-color: transparent;
+  color: rgb(13, 113, 252);
+  border: none; 
+  transition: .5s;
+  font-size: 0.8rem;
+  font-weight: 300;
+  text-align: right;
+  padding: 0;
+  margin: 0;
+}.forgot-pass-btn:hover{ 
+  opacity: 50%;
+}
+
 .logo-text{
   background-color: transparent;
   color: var(--primary);
