--- a/public/css/main.css
+++ b/public/css/main.css
@@ -41,27 +41,39 @@
   background-color: #677e8a17;
 }
 
-.data-table th:nth-child(1),
-.data-table td:nth-child(1),
+.data-table th:nth-child(11),
+.data-table td:nth-child(11),
+.data-table th:nth-child(12),
+.data-table td:nth-child(12) {
+    min-width: 95px;
+}
+
+.data-table th:nth-child(2),
+.data-table td:nth-child(2),
 .data-table th:nth-child(3),
 .data-table td:nth-child(3),
 .data-table th:nth-child(4),
 .data-table td:nth-child(4),
 .data-table th:nth-child(5),
 .data-table td:nth-child(5),
+.data-table th:nth-child(13),
+.data-table td:nth-child(13) {
+    min-width: 120px;
+}
+
 .data-table th:nth-child(6),
 .data-table td:nth-child(6),
 .data-table th:nth-child(7),
-.data-table td:nth-child(7) {
-    min-width: 150px; 
+.data-table td:nth-child(7),
+.data-table th:nth-child(8),
+.data-table td:nth-child(8) { 
+    min-width: 150px;
 }
 
-.data-table th:nth-child(3),
-.data-table td:nth-child(3),
-.data-table th:nth-child(4),
-.data-table td:nth-child(4),
-.data-table th:nth-child(8),
-.data-table td:nth-child(8) {
+.data-table th:nth-child(2),
+.data-table td:nth-child(2),
+.data-table th:nth-child(10),
+.data-table td:nth-child(10) {
     max-width: 350px; 
 }
 
