--- a/public/css/main.css
+++ b/public/css/main.css
@@ -308,6 +308,28 @@ cursor: pointer;
   font-size: 1rem;
 }
 
+.show-pass-btn {
+  position: absolute;
+  right: 30px;
+  top: 50%;
+  transform: translateY(-50%);
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  color: var(--primary);
+  padding: 0;
+  height: auto;
+}.show-pass-btn:hover {
+  opacity: 70%;
+}
+
+.row-login {
+  flex-shrink: 0;
+  width: 100%;
+  max-width: 100%;
+  margin-top: var(--bs-gutter-y);
+}
+
 @media (max-width: 768px) {
   .responsive-img {
       width: 80%;
